# news-bar

./: .gitignore  AGENT-SETUP.md  CHANGELOG.md  LICENSE  README.md  config.json  dist-workspace.toml  uninstall.ps1
rust/: Cargo.toml  RSS.md
rust/src/: config.rs  feeds.rs  main.rs  translate.rs
rust/src/platform/: mod.rs
rust/src/platform/windows/: appbar.rs  mod.rs  render.rs
