[package]
name = "news-bar"
version = "2.1.0"
edition = "2021"
description = "Barre fine defilante ancree en bas/haut de l'ecran (façon bandeau de news)."
license = "MIT"
repository = "https://github.com/enixCode/news-bar"

[[bin]]
name = "news-bar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", default-features = false, features = ["native-tls"] }
roxmltree = "0.20"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
